--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8">
-<title>Bangladesg.giv.bd</title>
+<title>People's Republic of Bangladesh</title>
 <style>
 .topnav{
  font-size: 20px;
  text-align: right;
- background-color: #018D70;
+ background-color: #006747;
 }
 .middlenav{
  font-size: 20px;
@@ -30,13 +30,16 @@
 }
 </style>
 
-<h1  style="color: #BA2C44; background-color: #018D70; font-size: 70px; text-align: left";> <img src="bd_logo.jpg" width="96" height="96" alt="Official Logo of Bangladesh"> Bangladesh.gov.bd</h1>
+<div style="text-align:center; width:100%">
+<a href="https://bangladesh.gov.bd/index.php"><img style="text-align: right" src="flag_gifs2.gif" width="67" height="71"></a>
+</div>
+<h1  style="color: #DA291C; background-color: #006747; font-size: 60px; text-align: left";> <a href="https://bangladesh.gov.bd/index.php"> <img src="bd_logo.jpg" width="96" height="80" alt="Official Logo of Bangladesh"></a> Bangladesh.gov.bd </h1>
 
 </head>
 <nav class="topnav">
-<a href="https://bangladesh.gov.bd/index.php" target="_self" style="color: #BA2C44;">Home</a>	| 
-<a href="https://bit.ly/2z0usoX" target="_blank" style="color: #BA2C44;">Service Details</a>	| 
-<a href="http://www.parjatan.gov.bd/" target="_blank" style="color: #BA2C44;">About Bangladesg Tourist Center</a>	| 
+<a href="https://bangladesh.gov.bd/index.php" target="_self" style="color: #DA291C;">Home</a>	| 
+<a href="https://bit.ly/2z0usoX" target="_blank" style="color: #DA291C;">Service Details</a>	| 
+<a href="http://www.parjatan.gov.bd/" target="_blank" style="color: #DA291C;">About Bangladesg Tourist Center</a>	| 
 <a href="https://bit.ly/2yadLXR" target="_blank" style="color: #BA2C44;">Foreign Investment</a>	
 </nav>
 <body>
@@ -69,7 +72,7 @@
 <p style="color: green;">_______________________________________________________</p>
 	<li><a href="https://bit.ly/2V6tYWQ" target="_blank" style="color: #aa87c4;">National Plan for Disaster Management. (2010-2015)<br>
 (07-04-2015)</a></li>
-<a href="https://bit.ly/2RCus57" target="_blank" style="color: #aa87c4;"><h2 style="color: green;">____________  <abbr title="All Initiative"> <b>READ All</b></abbr> ____________ </h2></a> 
+<a href="https://bit.ly/2RCus57" target="_blank" style="color: #aa87c4;"><h2 style="color: #006747;">____________  <abbr title="All Initiative"> <b>READ All</b></abbr> ____________ </h2></a> 
 </ul><br>
 <img src="img_4.png" width="670" height="286"><br><br>
 
@@ -114,9 +117,7 @@
 <a href="https://bit.ly/3b89G4N" target="_blank" style="color: black;">Frequently Asked</a>	
 </nav><br>
 
-<div style="text-align:center; width:100%">
-<img style="text-align: right" src="flag_gifs2.gif" width="67" height="71">
-</div>
+
 <p class="b" style="color: black;" >This site has been last updated: 2023-6-6 6:10<br>
 First Test With HTML Only</p>
 
@@ -133,11 +134,20 @@ First Test With HTML Only</p>
 
 
 <div style="text-align:center; width:100%">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d148324.42647591786!2d90.34928585186968!3d23.78077774443206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e1!3m2!1sen!2sbd!4v1586882137031!5m2!1sen!2sbd" width="800" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3746984.2769835913!2d88.1007238184206!3d23.49058969360057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30adaaed80e18ba7%3A0xf2d28e0c4e1fc6b!2sBangladesh!5e0!3m2!1sen!2sbd!4v1586889456729!5m2!1sen!2sbd" width="800" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 
+<br><br>
+
+<div style="text-align:center; width:100%">
+&#169;2020.
+</dev>
 
 </footer>
+
+
+
+                            
 
 </body>
 </html>
