--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8">
+<meta name="view-port" content="width=device-width, initial-scale=1.0">
+<meta https-equiv="X-UA-Compatible" content="ie=edge">
 <title>People's Republic of Bangladesh</title>
 <style>
 .topnav{
